# rinha-de-backend-2024-q1

./: README.md
fastapi/: Dockerfile  Makefile  docker-compose.prd.yml  pyproject.toml  script.sql
fastapi/app/: db.py  main.py  settings.py
